Implemented PUT/user
