# api/src/openapi/openapi.yaml
@@ -68,6 +68,50 @@ paths:
               schema:
                 $ref: '#/components/schemas/UnexpectedError'
 
+    put:
+      tags:
+        - user
+      summary: Updates a user.
+      description: Invoke this endpoint to update a user.
+      operationId: src.api.user.put
+      parameters:
+        - in: path
+          name: user_id
+          description: User identifier.
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        description: Body wrapper for the request.
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: (optional) User full name.
+                email_address:
+                  type: string
+                  description: (optional) User email address.
+                image:
+                  type: string
+                  description: (optional) User image base64-encoded.
+      responses:
+        200:
+          description: Standard Compra Local API JSON response. You should check the `error` attribute to determine if there was an error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIResponse'
+        default:
+          description: Unexpected error.
+          content:
+            application/text:
+              schema:
+                $ref: '#/components/schemas/UnexpectedError'
+
   /user:
     post:
       tags:
